--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,19 @@ build-backend = "hatchling.build"
 
 
 [project]
-name = "pyfleascope_dfreier"
-version = "0.0.1"
+name = "pyfleascope"
+version = "0.0.3"
 authors = [
   { name="D. Freiermuth", email="author@example.com" },
 ]
 description = "A python package for instrumenting the FleaScope"
 readme = "README.md"
 requires-python = ">=3.9"
+dependencies = [
+    "pyserial",
+    "pandas",
+    "pyudev",
+]
 classifiers = [
     "Programming Language :: Python :: 3",
     "Operating System :: OS Independent",
@@ -22,6 +27,3 @@ license-files = ["LICEN[CS]E*"]
 [project.urls]
 Homepage = "https://github.com/daniel-freiermuth/pyfleascope"
 Issues = "https://github.com/daniel-freiermuth/pyfleascope/issues"
-
-[tool.hatch.build.targets.wheel]
-packages = ["src"]
